--- a/lerna.json
+++ b/lerna.json
@@ -1,5 +1,6 @@
 {
   "$schema": "node_modules/@lerna-lite/cli/schemas/lerna-schema.json",
   "version": "1.0.0",
-  "useWorkspaces": true
+  "useWorkspaces": true,
+  "npmClient": "npm"
 }
