--- a/workspaces/configs/package.json
+++ b/workspaces/configs/package.json
@@ -48,7 +48,7 @@
   },
   "engines": {
     "node": "18.x || 20.x || >=22.x",
-    "npm": ">=10"
+    "pnpm": ">=9.x"
   },
   "publishConfig": {
     "access": "public",
