--- a/workspaces/lint-react/package.json
+++ b/workspaces/lint-react/package.json
@@ -27,7 +27,7 @@
     "eslint-plugin-react": "^7.36.1"
   },
   "devDependencies": {
-    "@phanect/configs": "2024.10.3",
+    "@phanect/configs": "workspace:*",
     "@types/node": "^22.0.0",
     "eslint": "^9.11.1",
     "tsup": "^8.2.4",
@@ -44,7 +44,7 @@
   },
   "engines": {
     "node": "18.x || 20.x || >=22.x",
-    "npm": ">=10.x"
+    "pnpm": ">=9.x"
   },
   "publishConfig": {
     "access": "public",
