--- a/workspaces/lint-svelte/package.json
+++ b/workspaces/lint-svelte/package.json
@@ -25,7 +25,7 @@
     "eslint-plugin-svelte": "^2.39.0"
   },
   "devDependencies": {
-    "@phanect/configs": "2024.10.3",
+    "@phanect/configs": "workspace:*",
     "@types/node": "^22.0.0",
     "eslint": "^9.7.0",
     "tsup": "^8.2.4",
@@ -42,7 +42,7 @@
   },
   "engines": {
     "node": "18.x || 20.x || >=22.x",
-    "npm": ">=10.x"
+    "pnpm": ">=9.x"
   },
   "publishConfig": {
     "access": "public",
