--- a/workspaces/lint-vue/package.json
+++ b/workspaces/lint-vue/package.json
@@ -26,7 +26,7 @@
     "eslint-plugin-vue": "^9.26.0"
   },
   "devDependencies": {
-    "@phanect/configs": "2024.10.3",
+    "@phanect/configs": "workspace:*",
     "@types/node": "^22.0.0",
     "eslint": "^9.7.0",
     "tsup": "^8.2.4",
@@ -37,7 +37,7 @@
   },
   "engines": {
     "node": "18.x || 20.x || >=22.x",
-    "npm": ">=10.x"
+    "pnpm": ">=9.x"
   },
   "publishConfig": {
     "access": "public",
