--- a/workspaces/lint/package.json
+++ b/workspaces/lint/package.json
@@ -41,7 +41,7 @@
     "typescript-eslint": "^8.0.0"
   },
   "devDependencies": {
-    "@phanect/configs": "2024.10.3",
+    "@phanect/configs": "workspace:*",
     "@types/eslint__js": "^8.42.3",
     "@types/node": "^22.0.0",
     "eslint": "^9.7.0",
@@ -68,7 +68,7 @@
   },
   "engines": {
     "node": "18.x || 20.x || >=22.x",
-    "npm": ">=10.x"
+    "pnpm": ">=9.x"
   },
   "publishConfig": {
     "access": "public",
