--- a/workspaces/lint/tsconfig.json
+++ b/workspaces/lint/tsconfig.json
@@ -1,6 +1,9 @@
 {
   "$schema": "https://json.schemastore.org/tsconfig",
   "extends": "../../tsconfig.json",
+  "compilerOptions": {
+    "typeRoots": [ "./src/types/" ]
+  },
   "include": [ "**/*.js", "**/*.mjs", "**/*.ts" ],
   "exclude": [ "dist" ],
 }
