--- a/workspaces/lint/package.json
+++ b/workspaces/lint/package.json
@@ -34,6 +34,7 @@
     "@eslint/js": "^9.7.0",
     "@stylistic/eslint-plugin": "^2.6.1",
     "eslint-import-resolver-typescript": "^3.6.3",
+    "eslint-plugin-editorconfig": "^4.0.3",
     "eslint-plugin-import": "^2.31.0",
     "eslint-plugin-jsdoc": "^50.2.2",
     "eslint-plugin-jsonc": "^2.15.1",
