--- a/workspaces/lint-react/package.json
+++ b/workspaces/lint-react/package.json
@@ -24,7 +24,8 @@
   "dependencies": {
     "@next/eslint-plugin-next": "^15.0.1",
     "eslint-plugin-jsx-a11y": "^6.10.0",
-    "eslint-plugin-react": "^7.36.1"
+    "eslint-plugin-react": "^7.36.1",
+    "eslint-plugin-react-hooks": "^5.0.0"
   },
   "devDependencies": {
     "@phanect/configs": "workspace:*",
