feat: add default tsconfig

--- a/workspaces/configs/configs/ts/tsconfig.cloudflare.json
+++ b/workspaces/configs/configs/ts/tsconfig.cloudflare.json
@@ -1,5 +1,5 @@
 {
-  "extends": "./tsconfig.frontend.json",
+  "extends": "./tsconfig.default.json",
   "compilerOptions": {
     "types": [ "@cloudflare/workers-types" ]
   }
