feat: merge `jsx` option to default config
It does not affect to non-JSX projects.

--- a/workspaces/configs/configs/ts/tsconfig.default.json
+++ b/workspaces/configs/configs/ts/tsconfig.default.json
@@ -28,6 +28,9 @@
     // Module resolution
     "lib": [ "esnext" ],
     "moduleResolution": "bundler",
-    "resolveJsonModule": true
+    "resolveJsonModule": true,
+
+    // JSX
+    "jsx": "react-jsx"
   }
 }
