feat: set explicitly not to generate sourcemaps by default

--- a/workspaces/configs/configs/ts/tsconfig.default.json
+++ b/workspaces/configs/configs/ts/tsconfig.default.json
@@ -21,6 +21,7 @@
     "declaration": false,
     "noEmit": true,
     "module": "esnext",
+    "sourceMap": false,
     "target": "esnext",
     "newLine": "lf",
     "removeComments": true,
