feat(configs): export tsconfigs as JS
Before this commit, you could not import without appending `assert { type: "json" }`, which is not supported by ESLint.

--- a/workspaces/configs/package.json
+++ b/workspaces/configs/package.json
@@ -19,13 +19,17 @@
     "./ts": "./configs/ts/tsconfig.default.json",
     "./ts/nodejs": "./configs/ts/tsconfig.nodejs.json",
     "./ts/addons/npm": "./configs/ts/addons/tsconfig.npm.json",
+    "./ts/importable": {
+      "types": "./dist/tsconfigs.d.ts",
+      "default": "./dist/tsconfigs.js"
+    },
     "./tsup": {
       "types": "./dist/tsup.d.ts",
       "default": "./dist/tsup.js"
     }
   },
   "scripts": {
-    "build": "tsup",
+    "build": "tsx ./scripts/build-prep.ts && tsup",
     "lint": "tsc --noEmit && : configs"
   },
   "devDependencies": {
