feat(tsconfig): do not truncate error messages & make it readable

--- a/workspaces/configs/configs/ts/tsconfig.default.json
+++ b/workspaces/configs/configs/ts/tsconfig.default.json
@@ -25,6 +25,10 @@
     // JSX
     "jsx": "react-jsx",
 
+    // Error message format
+    "noErrorTruncation": true,
+    "pretty": true,
+
     // Code generation
     "declaration": false,
     "noEmit": true,
