fix(vue): add missing `typescript-eslint`

--- a/workspaces/lint-vue/package.json
+++ b/workspaces/lint-vue/package.json
@@ -23,7 +23,8 @@
   },
   "dependencies": {
     "@nuxt/eslint-config": "^1.0.0",
-    "eslint-plugin-vue": "^9.26.0"
+    "eslint-plugin-vue": "^9.26.0",
+    "typescript-eslint": "^8.24.1"
   },
   "devDependencies": {
     "@phanect/configs": "workspace:*",
