--- a/workspaces/lint-svelte/package.json
+++ b/workspaces/lint-svelte/package.json
@@ -32,6 +32,7 @@
     "typescript": "^5.3.3"
   },
   "peerDependencies": {
+    "@phanect/lint": "workspace:*",
     "eslint": "^9.7.0",
     "svelte": "*"
   },
