--- a/workspaces/lint-svelte/package.json
+++ b/workspaces/lint-svelte/package.json
@@ -22,6 +22,7 @@
     "lint": "tsc --noEmit && : lint-svelte"
   },
   "dependencies": {
+    "@typescript-eslint/parser": "^8.24.1",
     "eslint-plugin-svelte": "^2.39.0"
   },
   "devDependencies": {
