--- a/workspaces/lint/package.json
+++ b/workspaces/lint/package.json
@@ -32,6 +32,7 @@
   },
   "dependencies": {
     "@eslint/js": "^9.7.0",
+    "@eslint/markdown": "^6.3.0",
     "@stylistic/eslint-plugin": "^4.0.1",
     "eslint-import-resolver-typescript": "^4.2.2",
     "eslint-plugin-import": "^2.31.0",
