--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
     "@types/node": "^22.0.0",
     "eslint": "^9.7.0",
     "esno": "^4.7.0",
+    "stylelint": "^16.17.0",
+    "stylelint-config-standard": "^37.0.0",
     "tsup": "^8.3.0",
     "type-fest": "^4.26.1",
     "typescript": "^5.3.3"
