--- a/workspaces/lint/package.json
+++ b/workspaces/lint/package.json
@@ -44,6 +44,7 @@
     "typescript-eslint": "^8.0.0"
   },
   "devDependencies": {
+    "@eslint/json": "^0.11.0",
     "@phanect/configs": "workspace:*",
     "@types/node": "^22.0.0",
     "eslint": "^9.7.0",
