--- a/examples/nuxt/package.json
+++ b/examples/nuxt/package.json
@@ -17,6 +17,7 @@
     "@phanect/lint-vue": "workspace:*",
     "@types/node": "^22.1.0",
     "eslint": "^9.8.0",
+    "jiti": "^2.5.1",
     "vue-tsc": "^2.1.6"
   },
   "engines": {
