--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@types/node": "^22.0.0",
     "eslint": "^9.7.0",
     "esno": "^4.7.0",
+    "jiti": "^2.5.1",
     "tsup": "^8.3.0",
     "type-fest": "^4.26.1",
     "typescript": "^5.3.3"
