chore: remove no-longer required @types/eslint
ESLint already has its type definitions, and it does not match @types/eslint.

--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -7,3 +7,6 @@ onlyBuiltDependencies:
   - esbuild
   - sharp
   - unrs-resolver
+
+overrides:
+  "@types/eslint-plugin-jsx-a11y>@types/eslint": "-"
