fix(example): correct shared tsconfig name

--- a/examples/astro/tsconfig.json
+++ b/examples/astro/tsconfig.json
@@ -2,7 +2,7 @@
   "$schema": "https://json.schemastore.org/tsconfig",
   "extends": [
     "astro/tsconfigs/base",
-    "@phanect/configs/ts/frontend",
+    "@phanect/configs/ts"
   ],
   "compilerOptions": {
     "baseUrl": ".",
