--- a/examples/nuxt/tsconfig.json
+++ b/examples/nuxt/tsconfig.json
@@ -2,7 +2,7 @@
   "$schema": "https://json.schemastore.org/tsconfig",
   "extends": [
     "./.nuxt/tsconfig.json",
-    "@phanect/configs/ts/frontend",
+    "@phanect/configs/ts"
   ],
   "include": [ "**/*.js", "**/*.mjs", "**/*.ts", "**/*.vue" ]
 }
