--- a/examples/nodejs/package.json
+++ b/examples/nodejs/package.json
@@ -9,6 +9,7 @@
   "devDependencies": {
     "@phanect/configs": "workspace:*",
     "@phanect/lint": "workspace:*",
+    "@types/node": "^24.2.1",
     "eslint": "^9.8.0",
     "jiti": "^2.5.1",
     "vitest": "^3.0.2"
