fix: add missing `globals`

--- a/workspaces/lint-astro/package.json
+++ b/workspaces/lint-astro/package.json
@@ -23,7 +23,8 @@
   },
   "dependencies": {
     "eslint-plugin-astro": "^1.2.4",
-    "eslint-plugin-jsx-a11y": "^6.10.0"
+    "eslint-plugin-jsx-a11y": "^6.10.0",
+    "globals": "^16.3.0"
   },
   "devDependencies": {
     "@phanect/configs": "workspace:*",
