--- a/workspaces/lint-svelte/package.json
+++ b/workspaces/lint-svelte/package.json
@@ -23,7 +23,8 @@
   },
   "dependencies": {
     "@typescript-eslint/parser": "^8.24.1",
-    "eslint-plugin-svelte": "^3.0.2"
+    "eslint-plugin-svelte": "^3.0.2",
+    "globals": "^16.3.0"
   },
   "devDependencies": {
     "@phanect/configs": "workspace:*",
