--- a/workspaces/lint/package.json
+++ b/workspaces/lint/package.json
@@ -40,6 +40,7 @@
     "eslint-plugin-n": "^17.7.0",
     "eslint-plugin-promise": "^7.0.0",
     "eslint-plugin-vitest": "^0.5.4",
+    "globals": "^16.3.0",
     "typescript-eslint": "^8.0.0"
   },
   "devDependencies": {
