--- a/workspaces/lint-vue/package.json
+++ b/workspaces/lint-vue/package.json
@@ -23,6 +23,7 @@
   },
   "dependencies": {
     "@nuxt/eslint-config": "^1.0.0",
+    "eslint-plugin-import": "^2.32.0",
     "eslint-plugin-vue": "^10.0.0",
     "globals": "^16.3.0",
     "typescript-eslint": "^8.24.1"
