--- a/workspaces/lint-react/package.json
+++ b/workspaces/lint-react/package.json
@@ -22,6 +22,7 @@
     "lint": "tsc --noEmit && : lint-react"
   },
   "dependencies": {
+    "@eslint/eslintrc": "^3.3.1",
     "@next/eslint-plugin-next": "^15.0.1",
     "eslint-plugin-jsx-a11y": "^6.10.0",
     "eslint-plugin-react": "^7.36.1",
