--- a/workspaces/lint/package.json
+++ b/workspaces/lint/package.json
@@ -31,6 +31,7 @@
     "lint": "tsc --noEmit && : lint"
   },
   "dependencies": {
+    "@eslint/css": "^0.11.0",
     "@eslint/js": "^9.7.0",
     "@stylistic/eslint-plugin": "^5.2.3",
     "eslint-import-resolver-typescript": "^4.2.2",
