refactor: replace `@types/eslint` with `eslint`

--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -9,4 +9,4 @@ onlyBuiltDependencies:
   - unrs-resolver
 
 overrides:
-  "@types/eslint-plugin-jsx-a11y>@types/eslint": "-"
+  "@types/eslint-plugin-jsx-a11y>@types/eslint": "npm:eslint@^9"
