--- a/examples/astro/package.json
+++ b/examples/astro/package.json
@@ -18,7 +18,7 @@
     "typescript": "^5.5.4"
   },
   "engines": {
-    "node": "20.x || 22.x || >=24.x",
+    "node": "^20.11.0 || ^22.16.0 || >=24.x",
     "npm": ">=10.x"
   }
 }
