--- a/examples/nodejs/package.json
+++ b/examples/nodejs/package.json
@@ -15,7 +15,7 @@
     "vitest": "^3.0.2"
   },
   "engines": {
-    "node": "20.x || 22.x || >=24.x",
+    "node": "^20.11.0 || ^22.16.0 || >=24.x",
     "npm": ">=10.x"
   }
 }
