--- a/examples/nuxt/package.json
+++ b/examples/nuxt/package.json
@@ -21,7 +21,7 @@
     "vue-tsc": "^3.0.5"
   },
   "engines": {
-    "node": "20.x || 22.x || >=24.x",
+    "node": "^20.11.0 || ^22.16.0 || >=24.x",
     "npm": ">=10.x"
   }
 }
