--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "typescript": "^5.3.3"
   },
   "engines": {
-    "node": "20.x || 22.x || >=24.x",
+    "node": "^20.11.0 || ^22.16.0 || >=24.x",
     "pnpm": ">=10.x"
   },
   "packageManager": "pnpm@10.15.0+sha512.486ebc259d3e999a4e8691ce03b5cac4a71cbeca39372a9b762cb500cfdf0873e2cb16abe3d951b1ee2cf012503f027b98b6584e4df22524e0c7450d9ec7aa7b"
