--- a/workspaces/configs/package.json
+++ b/workspaces/configs/package.json
@@ -39,7 +39,7 @@
     "typescript": "^5.4.5"
   },
   "peerDependencies": {
-    "@types/node": "20.x || 22.x || >=24.x",
+    "@types/node": "^20.11.0 || ^22.16.0 || >=24.x",
     "tsup": "^8.3.0",
     "typescript": ">=5.x"
   },
@@ -49,7 +49,7 @@
     }
   },
   "engines": {
-    "node": "20.x || 22.x || >=24.x",
+    "node": "^20.11.0 || ^22.16.0 || >=24.x",
     "pnpm": ">=10.x"
   },
   "publishConfig": {
