--- a/workspaces/lint-vue/package.json
+++ b/workspaces/lint-vue/package.json
@@ -39,7 +39,7 @@
     "eslint": "^9.7.0"
   },
   "engines": {
-    "node": "20.x || 22.x || >=24.x",
+    "node": "^20.11.0 || ^22.16.0 || >=24.x",
     "pnpm": ">=10.x"
   },
   "publishConfig": {
