--- a/workspaces/lint/package.json
+++ b/workspaces/lint/package.json
@@ -70,7 +70,7 @@
     }
   },
   "engines": {
-    "node": "20.x || 22.x || >=24.x",
+    "node": "^20.11.0 || ^22.16.0 || >=24.x",
     "pnpm": ">=10.x"
   },
   "publishConfig": {
