--- a/workspaces/configs/configs/ts/tsconfig.default.json
+++ b/workspaces/configs/configs/ts/tsconfig.default.json
@@ -14,6 +14,7 @@
     "noFallthroughCasesInSwitch": true,
     "noImplicitOverride": true,
     "noImplicitReturns": true,
+    "noUncheckedIndexedAccess": true,
 
     // Use ESLint's `no-unused-vars` rather than
     // tsc's `noUnusedLocals` & `noUnusedParameters` to
@@ -40,6 +41,10 @@
     "target": "esnext",
     "newLine": "lf",
     "removeComments": true,
-    "jsx": "preserve"
+    "jsx": "preserve",
+
+    // Build performance
+    "incremental": true,
+    "tsBuildInfoFile": ".tsbuildinfo"
   }
 }
