chore(example): remove `tsc` on `lint` which does not work properly in Astro projects

--- a/examples/astro/package.json
+++ b/examples/astro/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "lint": "tsc --noEmit && astro check && eslint && : example-astro"
+    "lint": "astro check && eslint && : example-astro"
   },
   "dependencies": {
     "astro": "^5.0.4"
