chore(example): give up using my own tsconfig in Nuxt project

--- a/examples/nuxt/tsconfig.json
+++ b/examples/nuxt/tsconfig.json
@@ -1,8 +1,4 @@
 {
   "$schema": "https://json.schemastore.org/tsconfig",
-  "extends": [
-    "./.nuxt/tsconfig.json",
-    "@phanect/configs/ts"
-  ],
-  "include": [ "**/*.js", "**/*.mjs", "**/*.ts", "**/*.vue" ]
+  "extends": "./.nuxt/tsconfig.json"
 }
