--- a/workspaces/lint/package.json
+++ b/workspaces/lint/package.json
@@ -31,7 +31,7 @@
     "lint": "tsc --noEmit && : lint"
   },
   "dependencies": {
-    "@eslint/css": "^0.13.0",
+    "@eslint/css": "0.13.0",
     "@eslint/js": "^9.7.0",
     "@stylistic/eslint-plugin": "^5.2.3",
     "eslint-import-resolver-typescript": "^4.2.2",
@@ -40,7 +40,7 @@
     "eslint-plugin-jsonc": "^2.15.1",
     "eslint-plugin-n": "^17.7.0",
     "eslint-plugin-promise": "^7.0.0",
-    "eslint-plugin-vitest": "^0.5.4",
+    "eslint-plugin-vitest": "0.5.4",
     "globals": "^16.3.0",
     "typescript-eslint": "^8.0.0"
   },
