--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -62,10 +62,9 @@ jobs:
       - lint
     if: github.event_name == 'release'
     runs-on: ubuntu-latest
-    # Required for npm publish --province
     permissions:
       contents: read
-      id-token: write
+      id-token: write # required for npm's Trusted Publishing
     timeout-minutes: 5
     steps:
       - uses: actions/checkout@1af3b93b6815bc44a9784bd300feb67ff0d1eeb3 # v6.0.0
